--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,9 @@ services:
       MYSQL_DATABASE: laravel
       MYSQL_USER: laravel
       MYSQL_PASSWORD: laravel
+    command:
+      -  --character-set-server=utf8mb4 
+      -  --collation-server=utf8mb4_unicode_ci
     ports:
       - "3306:3306"
     networks:
