--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,8 +58,9 @@ services:
     command:
       -  --character-set-server=utf8mb4 
       -  --collation-server=utf8mb4_unicode_ci
-    ports:
-      - "3306:3306"
+    network_mode: "host"
+    # ports:
+    #   - "3306:3306"
     networks:
       - laravel
 
