--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,8 +61,8 @@ services:
     network_mode: "host"
     # ports:
     #   - "3306:3306"
-    networks:
-      - laravel
+    # networks:
+    #   - laravel
 
 volumes:
   dbdata:
