removed port added network_mode: "host"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,11 +58,10 @@ services:
     command:
       -  --character-set-server=utf8mb4 
       -  --collation-server=utf8mb4_unicode_ci
-    network_mode: "host"
-    # ports:
-    #   - "3306:3306"
-    # networks:
-    #   - laravel
+    ports:
+      - "3306:3306"
+    networks:
+      - laravel
 
 volumes:
   dbdata:
