--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       - /var/www/node_modules
     networks:
       - laravel
-    depends_on:
-      - mysql
+    # depends_on:
+    #   - mysql
     command: |
       bash -c "
         echo 'Waiting for MySQL...'
