--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       - /var/www/node_modules
     networks:
       - laravel
-    # depends_on:
-    #   - mysql
+    depends_on:
+      - mysql
     command: |
       bash -c "
         echo 'Waiting for MySQL...'
@@ -44,24 +44,24 @@ services:
     networks:
       - laravel
 
-  # mysql:
-  #   image: mysql:8
-  #   container_name: laravel-mysql
-  #   restart: unless-stopped
-  #   volumes:
-  #     - dbdata:/var/lib/mysql
-  #   environment:
-  #     MYSQL_ROOT_PASSWORD: root
-  #     MYSQL_DATABASE: laravel
-  #     MYSQL_USER: laravel
-  #     MYSQL_PASSWORD: laravel
-  #   command:
-  #     -  --character-set-server=utf8mb4 
-  #     -  --collation-server=utf8mb4_unicode_ci
-  #   ports:
-  #     - "3306:3306"
-  #   networks:
-  #     - laravel
+  mysql:
+    image: mysql:8
+    container_name: laravel-mysql
+    restart: unless-stopped
+    volumes:
+      - dbdata:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: laravel
+      MYSQL_USER: laravel
+      MYSQL_PASSWORD: laravel
+    command:
+      -  --character-set-server=utf8mb4 
+      -  --collation-server=utf8mb4_unicode_ci
+    ports:
+      - "3307:3306"
+    networks:
+      - laravel
 
 volumes:
   dbdata:
